[gd_scene load_steps=3 format=3 uid="uid://bsdr5wdmpy5pg"]

[ext_resource type="Script" uid="uid://bwxht0kk4rfnb" path="res://settings_menu/components/global_illumination.gd" id="1_axfeq"]
[ext_resource type="PackedScene" uid="uid://pva2tkjpsaxa" path="res://settings_menu/components/slider_with_value/slider_with_value.tscn" id="2_6q6ie"]

[node name="GlobalIllumination" type="GridContainer"]
offset_right = 532.0
offset_bottom = 120.0
columns = 2
script = ExtResource("1_axfeq")

[node name="GILabel" type="Label" parent="."]
layout_mode = 2
text = "Global Illumination"

[node name="GIOptions" type="OptionButton" parent="."]
layout_mode = 2
selected = 0
item_count = 3
popup/item_0/text = "Disabled"
popup/item_0/id = 0
popup/item_1/text = "VoxelGI"
popup/item_1/id = 1
popup/item_2/text = "SDFGI"
popup/item_2/id = 2

[node name="GIResolutionLabel" type="Label" parent="."]
layout_mode = 2
text = "GI Resolution"

[node name="GIResolutionOption" type="OptionButton" parent="."]
layout_mode = 2
selected = 0
item_count = 2
popup/item_0/text = "Half"
popup/item_0/id = 0
popup/item_1/text = "Full"
popup/item_1/id = 1

[node name="SDFGICascadesLabel" type="Label" parent="."]
visible = false
layout_mode = 2
text = "SDFGI Cascades"

[node name="SDFGICascadesSlider" parent="." instance=ExtResource("2_6q6ie")]
visible = false
layout_mode = 2
rounded = true
min_value = 1.0
max_value = 8.0
value = 1.0
decimals_padding = 0

[node name="SDFGIProbeRaysLabel" type="Label" parent="."]
visible = false
layout_mode = 2
text = "SDFGI Ray Count"

[node name="SDFGIProbeRaysOptions" type="OptionButton" parent="."]
visible = false
layout_mode = 2
selected = 1
item_count = 7
popup/item_0/text = "4"
popup/item_0/id = 0
popup/item_1/text = "8"
popup/item_1/id = 1
popup/item_2/text = "16"
popup/item_2/id = 2
popup/item_3/text = "32"
popup/item_3/id = 3
popup/item_4/text = "64"
popup/item_4/id = 4
popup/item_5/text = "96"
popup/item_5/id = 5
popup/item_6/text = "128"
popup/item_6/id = 6

[node name="VoxelGIQualityLabel" type="Label" parent="."]
visible = false
layout_mode = 2
text = "VoxelGI Quality"

[node name="VoxelGIQualityOptions" type="OptionButton" parent="."]
visible = false
layout_mode = 2
selected = 0
item_count = 2
popup/item_0/text = "Low"
popup/item_0/id = 0
popup/item_1/text = "High"
popup/item_1/id = 1

[connection signal="item_selected" from="GIOptions" to="." method="_on_global_illumination_options_item_selected"]
[connection signal="item_selected" from="GIResolutionOption" to="." method="_on_gi_resolution_option_item_selected"]
[connection signal="slider_value_changed" from="SDFGICascadesSlider" to="." method="_on_sdfgi_cascades_slider_slider_value_changed"]
[connection signal="item_selected" from="SDFGIProbeRaysOptions" to="." method="_on_sdfgi_probe_rays_options_item_selected"]
[connection signal="item_selected" from="VoxelGIQualityOptions" to="." method="_on_voxel_gi_quality_options_item_selected"]
